# mnist-from-scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RUN
src/: BUILD  CMakeLists.txt  common.h  dataset.cpp  dataset.h
src/common/: CMakeLists.txt  common.h  exceptions.hpp  utils.hpp
src/dataset/: CMakeLists.txt  dataset.cpp  dataset.h
src/model/: CMakeLists.txt  model.cpp  model.h
src/ops/: CMakeLists.txt  ops.cpp  ops.h
tests/: BUILD  runner.cpp
